Text-Align-Fix - fixed text-align: middle

--- a/src/types/select.scss
+++ b/src/types/select.scss
@@ -40,7 +40,7 @@
 
 		width: 100%;
 		height: 100%;
-		text-align: middle;
+		text-align: center;
 		padding-left: $inputField-fieldText-horizontalPadding;
 		
 		overflow: hidden;
